Minor updates to sponsors.

--- a/frontend/admin/templates/partials/sponsor.html
+++ b/frontend/admin/templates/partials/sponsor.html
@@ -37,7 +37,7 @@
                         <div class="form-group">
                             <label class="control-label">Default Advertising Text</label>
                             <div id="epiceditor"></div>
-                            <textarea class="form-control hidden" placeholder="The default advertising text for this Sponsor" rows="4" ng-model="sponsor.default_text" id="default_text" name="default_text"></textarea>
+                            <textarea class="form-control hidden" rows="4" ng-model="sponsor.default_text" id="default_text" name="default_text"></textarea>
                         </div>                    
                     </div>
                     <div class="col-sm-4"></div>
