Add article module

--- a/frontend/admin/templates/admin.html
+++ b/frontend/admin/templates/admin.html
@@ -52,6 +52,9 @@
                     <li id="navCategories" class="dropdown">
                         <a href="#!categories">Categories</a>
                     </li>
+					<li id="navArticles" class="dropdown">
+                        <a href="#!articles">Articles</a>
+                    </li>
                     <li id="navUsers" class="dropdown">
                         <a href="#!users">Users</a>
                     </li>  
@@ -89,6 +92,7 @@
                         <option value="#!/dashboard">Dashboard</option>
                         <option value="#!/locations">Locations</option>
                         <option value="#!/categories">Categories</option>
+                        <option value="#!/articles">Articles</option>
                         <option value="#!/users">Users</option>
                         <option value="#!/sponsors">Sponsors</option>
                     </select>
@@ -114,6 +118,7 @@
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/location.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/categoryList.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/category.js"></script>  
+    <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/article.js"></script>  
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/sponsorList.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/sponsor.js"></script>      
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/epiceditor.min.js"></script>
