--- a/frontend/admin/templates/partials/article.html
+++ b/frontend/admin/templates/partials/article.html
@@ -38,7 +38,7 @@
 							<input type="radio" ng-model="article.page_no" name="page_no" value="5">5
 							
 							<div class="clear"></div>
-							<input type="checkbox" ng-model="article.is_allocated" name="page_no" value="0">Not Allocated Yet
+							<input type="checkbox" ng-model="article.is_allocated" name="is_allocated" value="0">Not Allocated Yet
                         </div>  
 					</div>
                 </div>
