Modify Article list page

--- a/frontend/admin/templates/admin.html
+++ b/frontend/admin/templates/admin.html
@@ -6,6 +6,7 @@
     <title>Administration Area</title>
 
     <link rel="stylesheet" type="text/css" href="{{ BASE_URL }}frontend/admin/css/admin/bootstrap.flatly.min.css" />
+    <link rel="stylesheet" type="text/css" href="{{ BASE_URL }}frontend/admin/css/admin/datepicker.css" />
     <link rel="stylesheet" type="text/css" href="{{ BASE_URL }}frontend/admin/css/admin/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="{{ BASE_URL }}frontend/admin/css/admin/style.css" />  
     
@@ -106,6 +107,7 @@
 
     <!-- App Script Dependencies -->             
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/bootstrap-datepicker.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/app.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/services.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/global.js"></script>
@@ -119,6 +121,7 @@
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/categoryList.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/category.js"></script>  
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/article.js"></script>  
+    <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/articleList.js"></script>  
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/sponsorList.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/sponsor.js"></script>      
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/epiceditor.min.js"></script>
