--- a/frontend/admin/templates/partials/articles.html
+++ b/frontend/admin/templates/partials/articles.html
@@ -5,41 +5,73 @@
     </ol><!-- .breadcrumb -->
     
     <div class="page-header">
-        <a href="#!/articles/detail/0" class="pull-right btn btn-sm btn-primary"><i class="fa fa-plus"></i> Add New Article</a>
-        <h3><strong>Article Listing</strong></h3>
-    </div>
-    
-    <div class="well well-sm">
-        Below is a list of the articles that currently exist on the system.<br/>
-        Each article is assigned to a article.
+        <h3><strong>5iles for a day</strong></h3>
     </div>
     
     <form id="frmFilters" name="frmFilters" action="article/list" method="post">   
         <input type="hidden" id="page" name="page" value="1" />
         <input type="hidden" id="keywords" name="keywords" value="" />
     </form>
-    
+	
+	<div class="row">
+		<div class="col-sm-4">     
+			<div class="datepicker"></div>
+		</div>
+		<div class="col-sm-8">    
+			<div class="table-responsive">
+			<table class="table table-striped table-hover">
+				<tr>
+					<td>1</td>
+					<td><a href="#">Add</a></td>
+				</tr>
+				<tr>
+					<td>2</td>
+					<td><a href="#">Add</a></td>
+				</tr>
+				<tr>
+					<td>3</td>
+					<td><a href="#">Add</a></td>
+				</tr>
+				<tr>
+					<td>4</td>
+					<td><a href="#">Add</a></td>
+				</tr>
+				<tr>
+					<td>5</td>
+					<td><a href="#">Add</a></td>
+				</tr>
+			</table>
+			</div>
+		</div>
+    </div>
+	
+	<hr />
+    <label for="">Unallocated articles</label>
     <div class="table-responsive">
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
-                    <th><a href="#">Name <!--<i class="fa fa-caret-down"></i>--></a></th>
-                    <th width="25%">Actions</th>
-                    <th width="10%"><a href="#">Added On</a></th>
+                    <th>Title</th>
+                    <th width="25%">Editor</th>
+                    <th width="25%">Added</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="article in articles">
-                    <td><a href="#!articles/detail/{{article.id}}"><strong>{{article.name}}</strong></a></td>
-                    <td myn-edit-remove callback-fn="handleAction(arg1, arg2)" data-id="{{article.id}}" item="article"></td>
+                    <td><a href="#!articles/detail/{{article.id}}"><strong>{{article.title}}</strong></a></td>
+                    <td>{{article.author}}</td>
                     <td myn-iso-to-uk-date-time-converter>{{article.created_dtm}}</td>
                 </tr>
             </tbody>
         </table>
-    </div>      
+    </div> 
     
     <div id="paginationWrapper" class="row">
-        <div class="col-sm-9 col-md-10 hidden-xs" myn-pager pages="pages" callback-fn="handlePageClick(arg1)"></div>
+			<div class="col-sm-9 col-md-10 hidden-xs" myn-pager pages="pages" callback-fn="handlePageClick(arg1)"></div>
+    </div>
+	<div class="row">
+		<a href="#!/articles/detail/0" class="pull-right btn btn-sm btn-primary"><i class="fa fa-plus"></i> Add</a>
+		<a class="pull-right btn btn-sm btn-primary"><i class="fa"></i> Delete</a>
     </div>
 </div>
 
