--- a/frontend/admin/templates/partials/article.html
+++ b/frontend/admin/templates/partials/article.html
@@ -31,14 +31,14 @@
                     <div class="col-sm-4">
 						<div class="form-group">
                             <input type="text" ng-model="article.published_date" class="form-control" id="published_date" name="published_date" required />
-							<input type="radio" ng-model="article.page_no" name="page_no" value="1">1
-							<input type="radio" ng-model="article.page_no" name="page_no" value="2">2
-							<input type="radio" ng-model="article.page_no" name="page_no" value="3">3
-							<input type="radio" ng-model="article.page_no" name="page_no" value="4">4
-							<input type="radio" ng-model="article.page_no" name="page_no" value="5">5
+							<input type="radio" ng-model="article.position_no" name="position_no" value="1">1
+							<input type="radio" ng-model="article.position_no" name="position_no" value="2">2
+							<input type="radio" ng-model="article.position_no" name="position_no" value="3">3
+							<input type="radio" ng-model="article.position_no" name="position_no" value="4">4
+							<input type="radio" ng-model="article.position_no" name="position_no" value="5">5
 							
 							<div class="clear"></div>
-							<input type="checkbox" ng-model="article.is_allocated" name="is_allocated" value="0">Not Allocated Yet
+							<input type="checkbox" ng-model="article.is_not_allocated" name="is_not_allocated" value="0">Not Allocated Yet
                         </div>  
 					</div>
                 </div>
