--- a/frontend/admin/templates/partials/articles.html
+++ b/frontend/admin/templates/partials/articles.html
@@ -19,26 +19,26 @@
 		</div>
 		<div class="col-sm-8">    
 			<div class="table-responsive">
-			<table class="table table-striped table-hover">
-				<tr>
+			<table class="table table-striped table-hover" id="asignment_days">
+				<tr id="position_1">
 					<td>1</td>
-					<td><a href="#">Add</a></td>
+					<td><a href="#!articles/detail/0">Add</a></td>
 				</tr>
-				<tr>
+				<tr id="position_2">
 					<td>2</td>
-					<td><a href="#">Add</a></td>
+					<td><a href="#!articles/detail/0">Add</a></td>
 				</tr>
-				<tr>
+				<tr id="position_3">
 					<td>3</td>
-					<td><a href="#">Add</a></td>
+					<td><a href="#!articles/detail/0">Add</a></td>
 				</tr>
-				<tr>
+				<tr id="position_4">
 					<td>4</td>
-					<td><a href="#">Add</a></td>
+					<td><a href="#!articles/detail/0">Add</a></td>
 				</tr>
-				<tr>
+				<tr id="position_5">
 					<td>5</td>
-					<td><a href="#">Add</a></td>
+					<td><a href="#!articles/detail/0">Add</a></td>
 				</tr>
 			</table>
 			</div>
