Working on file uploading

--- a/frontend/admin/templates/admin.html
+++ b/frontend/admin/templates/admin.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="{{ BASE_URL }}frontend/admin/css/admin/datepicker.css" />
     <link rel="stylesheet" type="text/css" href="{{ BASE_URL }}frontend/admin/css/admin/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="{{ BASE_URL }}frontend/admin/css/admin/style.css" />  
+    <link rel="stylesheet" type="text/css" href="{{ BASE_URL }}frontend/admin/css/fileuploader.css" />
     
     <!-- Core Script Dependencies -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
@@ -124,6 +125,7 @@
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/articleList.js"></script>  
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/sponsorList.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/sponsor.js"></script>      
+    <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/fileuploader.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/epiceditor.min.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/main.js"></script>
     <!-- End App Script Dependencies -->      
