--- a/frontend/admin/templates/partials/sponsor.html
+++ b/frontend/admin/templates/partials/sponsor.html
@@ -26,7 +26,12 @@
                         <div class="form-group">
                             <label class="control-label">Sponsor Name</label>
                             <input type="text" ng-model="sponsor.name" class="form-control" placeholder="Sponsor Name" id="name" name="name" required />
-                        </div>  
+                        </div> 
+                        
+                        <div class="form-group">
+                            <label class="control-label">Sponsor Logo</label>
+                            <div id="upload_logo"></div> 
+                        </div>
                         
                         <div class="form-group hideOnNew">
                             <label class="control-label">Notes</label>
