--- a/frontend/admin/templates/partials/articles.html
+++ b/frontend/admin/templates/partials/articles.html
@@ -53,6 +53,7 @@
                 <tr>
                     <th>Title</th>
                     <th width="25%">Editor</th>
+                    <th width="25%">Category</th>
                     <th width="25%">Added</th>
                 </tr>
             </thead>
@@ -60,6 +61,7 @@
                 <tr ng-repeat="article in articles">
                     <td><a href="#!articles/detail/{{article.id}}"><strong>{{article.title}}</strong></a></td>
                     <td>{{article.author}}</td>
+                    <td>{{article.category}}</td>
                     <td myn-iso-to-uk-date-time-converter>{{article.created_dtm}}</td>
                 </tr>
             </tbody>
