Add directive dragable

--- a/frontend/admin/templates/admin.html
+++ b/frontend/admin/templates/admin.html
@@ -111,6 +111,7 @@
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/bootstrap-datepicker.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/app.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/services.js"></script>
+	<script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/draganddrop.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/global.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/dashboard.js"></script>
     <script type="text/javascript" src="{{ BASE_URL }}frontend/admin/js/controllers/locations.js"></script>
