--- a/frontend/admin/templates/partials/articles.html
+++ b/frontend/admin/templates/partials/articles.html
@@ -22,23 +22,23 @@
 			<table class="table table-striped table-hover" id="asignment_days">
 				<tr id="position_1">
 					<td>1</td>
-					<td><a href="#!articles/detail/0">Add</a></td>
+					<td ui-on-Drop="onDrop($event,$data, articles)"><a href="#!articles/detail/0">Add</a></td>
 				</tr>
 				<tr id="position_2">
 					<td>2</td>
-					<td><a href="#!articles/detail/0">Add</a></td>
+					<td ui-on-Drop="onDrop($event,$data, articles)"><a href="#!articles/detail/0">Add</a></td>
 				</tr>
 				<tr id="position_3">
 					<td>3</td>
-					<td><a href="#!articles/detail/0">Add</a></td>
+					<td ui-on-Drop="onDrop($event,$data, articles)"><a href="#!articles/detail/0">Add</a></td>
 				</tr>
 				<tr id="position_4">
 					<td>4</td>
-					<td><a href="#!articles/detail/0">Add</a></td>
+					<td ui-on-Drop="onDrop($event,$data, articles)"><a href="#!articles/detail/0">Add</a></td>
 				</tr>
 				<tr id="position_5">
 					<td>5</td>
-					<td><a href="#!articles/detail/0">Add</a></td>
+					<td ui-on-Drop="onDrop($event,$data, articles)"><a href="#!articles/detail/0">Add</a></td>
 				</tr>
 			</table>
 			</div>
@@ -47,8 +47,8 @@
 	
 	<hr />
     <label for="">Unallocated articles</label>
-    <div class="table-responsive">
-        <table class="table table-striped table-hover">
+    <div class="table-responsive" id="list_unallocated_article">
+        <table class="table table-striped table-hover" ui-draggable="{true}">
             <thead>
                 <tr>
                     <th>Title</th>
@@ -58,7 +58,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="article in articles">
+                <tr ui-draggable="true" drag="article" on-drop-success="dropSuccessHandler($event,$index,articles)" ng-repeat="article in articles">
                     <td><a href="#!articles/detail/{{article.id}}"><strong>{{article.title}}</strong></a></td>
                     <td>{{article.author}}</td>
                     <td>{{article.sharedCategory[0].name}}</td>
